# src/PaperDotNet.Host/Internal/Generated/WolverineHandlers/PrincipalDeletedHandler1799230648.cs
@@ -1,0 +1,43 @@
+// <auto-generated/>
+#pragma warning disable
+using Microsoft.Extensions.DependencyInjection;
+
+namespace Internal.Generated.WolverineHandlers
+{
+    // START: PrincipalDeletedHandler1799230648
+    [global::System.CodeDom.Compiler.GeneratedCode("JasperFx", "1.0.0")]
+    public sealed class PrincipalDeletedHandler1799230648 : Wolverine.Runtime.Handlers.MessageHandler
+    {
+        private readonly Microsoft.Extensions.DependencyInjection.IServiceScopeFactory _serviceScopeFactory;
+
+        public PrincipalDeletedHandler1799230648(Microsoft.Extensions.DependencyInjection.IServiceScopeFactory serviceScopeFactory)
+        {
+            _serviceScopeFactory = serviceScopeFactory;
+        }
+
+
+
+        public override async System.Threading.Tasks.Task HandleAsync(Wolverine.Runtime.MessageContext context, System.Threading.CancellationToken cancellation)
+        {
+            await using var serviceScope = _serviceScopeFactory.CreateAsyncScope();
+            Microsoft.Extensions.DependencyInjection.ServiceProviderServiceExtensions.GetRequiredService<Wolverine.Runtime.ScopedMessageContextHolder>(serviceScope.ServiceProvider).Context = context;
+            // This service has been marked as requiring service location independent of Wolverine's ability to use constructor injection of everything else
+            var workspacesDbContext = Microsoft.Extensions.DependencyInjection.ServiceProviderServiceExtensions.GetRequiredService<PaperDotNet.Workspaces.Data.WorkspacesDbContext>(serviceScope.ServiceProvider);
+            // The actual message body
+            var principalDeleted = (PaperDotNet.Identity.Contracts.PrincipalDeleted)context.Envelope.Message;
+
+            System.Diagnostics.Activity.Current?.SetTag("message.handler", "PaperDotNet.Workspaces.Features.WorkspacePrincipalSubscriber");
+            System.Diagnostics.Activity.Current?.SetTag("handler.type", "PaperDotNet.Workspaces.Features.WorkspacePrincipalSubscriber");
+            
+            // The actual message execution
+            await PaperDotNet.Workspaces.Features.WorkspacePrincipalSubscriber.Handle(principalDeleted, workspacesDbContext, cancellation).ConfigureAwait(false);
+
+        }
+
+    }
+
+    // END: PrincipalDeletedHandler1799230648
+    
+    
+}
+
